a user friendly message instead of an empty block

--- a/web/views/partials/request-card-metrics-details.html
+++ b/web/views/partials/request-card-metrics-details.html
@@ -55,6 +55,8 @@
                     </ul>
                     <hr>
                 </li>
+            {{ else }}
+                Nada por aqui :)
             {{ end }}
         </ul>
     </section>
