missed this one

--- a/web/views/partials/request-card-metrics-details.html
+++ b/web/views/partials/request-card-metrics-details.html
@@ -32,6 +32,8 @@
                     </ul>
                     <hr>
                 </li>
+            {{ else }}
+                Nada por aqui :)
             {{ end }}
         </ul>
 
