--- a/web/views/partials/request-card-metrics-details.html
+++ b/web/views/partials/request-card-metrics-details.html
@@ -51,7 +51,7 @@
         <ul id="by-record-metrics-results" class="hidden flex-col gap-4 px-4 py-4">
             {{ range .Records }}
                 <li>
-                    <h4 class="text-lg">{{ FormatDateAsBR .IssueDate }}</h4>
+                    <h4 class="text-lg">NFA - {{ .InvoiceNumber }}</h4>
                     <ul class="flex flex-col gap-4 px-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
                         {{ template "partials/request-card-metrics-results-details" . }}
                     </ul>
