--- a/web/views/partials/request-card-metrics-details.html
+++ b/web/views/partials/request-card-metrics-details.html
@@ -5,10 +5,10 @@
             class="flex cursor-pointer items-center justify-between rounded border-b border-gray-200 bg-gray-50 p-4 transition-colors hover:bg-gray-100 active:bg-gray-200"
         >
             <h3 class="text-xl">Geral</h3>
-            <svg id="chevron-total" xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"/></svg>
+            <svg id="chevron-total" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>
         </header>
 
-        <ul id="total-metrics-results" class="flex flex-col gap-4 px-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
+        <ul id="total-metrics-results" class="hidden flex-col gap-4 px-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
             {{ template "partials/request-card-metrics-results-details" . }}
         </ul>
 
