--- a/web/v2/components/layouts/base.templ
+++ b/web/v2/components/layouts/base.templ
@@ -12,10 +12,9 @@ templ Base(page templ.Component) {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<link href="/static/css/tailwind.css" rel="stylesheet"/>
 			<link href="/static/css/custom.css" rel="stylesheet"/>
-			<link rel="icon" href="/static/icons/icon.ico" type="image/x-icon"/>
-			<script src="/static/js/vendor/htmx.min.js"></script>
-			<script src="/static/js/vendor/response-targets.js"></script>
-			<script src="/static/js/vendor/feather.min.js"></script>
+			<script src="/static/js/3p/htmx.min.js"></script>
+			<script src="/static/js/3p/response-targets.js"></script>
+			<script src="/static/js/3p/feather.min.js"></script>
 			@scripts.ApplyIcons()
 			<title>NFF</title>
 		</head>
@@ -25,7 +24,6 @@ templ Base(page templ.Component) {
 				@page
 			</main>
 			@components.Footer()
-			<div class="hidden text-sky-600"></div> <!-- Just so that tailwind loads this class -->
 		</body>
 	</html>
 }
