feat: login OK!

--- a/web/v2/components/pages/login.templ
+++ b/web/v2/components/pages/login.templ
@@ -1,5 +1,8 @@
 package pages
 
-templ LoginPage() {
-	
+import "github.com/cayo-rodrigues/nff/web/models"
+import "github.com/cayo-rodrigues/nff/web/components/forms"
+
+templ LoginPage(u *models.User) {
+	@forms.LoginForm(u)
 }
