--- a/web/v2/components/shared/button.templ
+++ b/web/v2/components/shared/button.templ
@@ -1,4 +1,4 @@
-package components
+package shared
 
 templ Button(theme string, attrs templ.Attributes) {
 	<button class={ getButtonClassesByTheme(theme) } { attrs... }>
