--- a/web/v2/components/forms/register.templ
+++ b/web/v2/components/forms/register.templ
@@ -1,7 +1,7 @@
 package forms
 
-import "github.com/cayo-rodrigues/nff/web/components"
 import "github.com/cayo-rodrigues/nff/web/models"
+import "github.com/cayo-rodrigues/nff/web/components/shared"
 
 templ RegisterForm(u *models.User) {
 	<form
@@ -28,8 +28,8 @@ templ RegisterForm(u *models.User) {
 			<sub class="min-h-3 break-words leading-3 text-red-500">{ u.Errors["Password"] }</sub>
 		</div>
 		<div class="mt-2">
-			@components.SubmitButton() {
-				@components.Icon("user-plus")
+			@shared.SubmitButton() {
+				@shared.Icon("user-plus")
 				<span>Cadastrar</span>
 			}
 		</div>
