feat: entities list layout

--- a/web/v2/components/layouts/base.templ
+++ b/web/v2/components/layouts/base.templ
@@ -18,7 +18,7 @@ templ Base(page templ.Component) {
 			@scripts.ApplyIcons()
 			<title>NFF</title>
 		</head>
-		<body>
+		<body class="bg-gray-100">
 			@shared.Nav()
 			<main id="main" class="px-4 pb-20 pt-4 sm:px-8 sm:py-6">
 				@page
