feat: nav styles

--- a/web/v2/components/layouts/base.templ
+++ b/web/v2/components/layouts/base.templ
@@ -19,7 +19,9 @@ templ Base(page templ.Component) {
 			<title>NFF</title>
 		</head>
 		<body class="bg-gray-100">
-			@shared.Nav()
+			<header>
+				@shared.Nav()
+			</header>
 			<main id="main" class="px-4 pb-20 pt-4 sm:px-8 sm:py-6">
 				@page
 			</main>
