--- a/web/v2/components/shared/nav.templ
+++ b/web/v2/components/shared/nav.templ
@@ -1,7 +1,12 @@
 package shared
 
 templ Nav() {
-	<nav>
-		NAV!
+	<nav hx-boost="true" class="sticky top-0 flex w-full justify-between bg-sky-700 px-4 py-2 text-white md:px-8 md:py-3">
+		<h1 class="text-xl">
+			<a href="/" hx-indicator="#global-indicator">
+				Nota Fiscal Fácil
+			</a>
+		</h1>
+		@Icon("menu")
 	</nav>
 }
