--- a/web/v2/components/shared/footer.templ
+++ b/web/v2/components/shared/footer.templ
@@ -2,6 +2,6 @@ package shared
 
 templ Footer() {
 	<footer class="bg-sky-900 p-4 text-white md:px-8 md:py-6">
-		FOOTER
+		<h3>Contato</h3>
 	</footer>
 }
