refact: standardize redirection

--- a/web/v2/components/forms/entities.templ
+++ b/web/v2/components/forms/entities.templ
@@ -192,15 +192,12 @@ func getIconNameByAction(e *models.Entity) string {
 }
 
 func getHxAttrsByAction(e *models.Entity) templ.Attributes {
-	attrs := templ.Attributes{
-		"hx-target":   "body",
-		"hx-boost":    "true",
-		"hx-push-url": "true",
-	}
 	if e.ID == 0 {
-		attrs["hx-post"] = "/entities/create"
-		return attrs
+		return templ.Attributes{
+			"hx-post": "/entities/create",
+		}
 	}
-	attrs["hx-put"] = fmt.Sprintf("/entities/update/%d", e.ID)
-	return attrs
+	return templ.Attributes{
+		"hx-put": fmt.Sprintf("/entities/update/%d", e.ID),
+	}
 }
