--- a/web/v2/ui/components/entities.templ
+++ b/web/v2/ui/components/entities.templ
@@ -1,7 +1,8 @@
 package components
 
 import "github.com/cayo-rodrigues/nff/web/models"
-import "github.com/cayo-rodrigues/nff/web/components/shared"
+import "github.com/cayo-rodrigues/nff/web/ui/shared"
+import "github.com/cayo-rodrigues/nff/web/ui/scripts"
 import "fmt"
 
 templ EntityList(entities []*models.Entity) {
@@ -24,7 +25,7 @@ templ EntityCard(e *models.Entity) {
 			<li><span class="font-medium">IE:</span> { e.Ie }</li>
 		</ul>
 		<div class="grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:grid-cols-3 sm:p-0">
-			<div onclick={ openDialog(entityDetailsID(e)) }>
+			<div onclick={ scripts.OpenDialog(entityDetailsTarget(e)) }>
 				@shared.WarningButton("xs") {
 					@shared.Icon("eye")
 				}
@@ -34,7 +35,7 @@ templ EntityCard(e *models.Entity) {
 					@shared.Icon("edit")
 				}
 			</a>
-			<div onclick={ openDialog(deleteConfirmationDialogID(e)) }>
+			<div onclick={ scripts.OpenDialog(deleteConfirmationDialogTarget(e)) }>
 				@shared.DefaultButton("xs") {
 					@shared.Icon("trash-2")
 				}
@@ -50,7 +51,10 @@ templ EntityDetails(e *models.Entity) {
 		<div class="rounded border border-gray-200 p-2 shadow shadow-gray-300">
 			<div class="relative rounded border border-gray-300 p-2">
 				<h3 class="text-lg font-bold">{ e.Name }</h3>
-				<div class="absolute -right-2 -top-2 rounded-full bg-white pb-1 pl-1 transition hover:bg-gray-100 active:bg-gray-200 sm:p-1" onclick={ closeDialog(entityDetailsID(e)) }>
+				<div 
+					class="absolute -right-2 -top-2 rounded-full bg-white pb-1 pl-1 transition hover:bg-gray-100 active:bg-gray-200 sm:p-1"
+					onclick={ scripts.CloseDialog(entityDetailsTarget(e)) }
+				>
 					@shared.Icon("x-circle")
 				</div>
 			</div>
@@ -71,17 +75,21 @@ templ EntityDetails(e *models.Entity) {
 }
 
 templ DeleteConfirmationDialog(e *models.Entity) {
-	<dialog id={ deleteConfirmationDialogID(e) }>
-		<div class="rounded border border-gray-200 p-2 shadow shadow-gray-300">
-			<h3>Quer mesmo deletar a entidade?</h3>
-			<p>Isso irá apagar todos os recursos relacionados à ela, como requerimentos, cancelamentos, histórico, etc.</p>
+	<dialog id={ deleteConfirmationDialogID(e) } class="sm:w-3/4 md:w-3/5 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
+		<div class="rounded border border-gray-200 p-4 shadow shadow-gray-300">
+			<h3 class="text-center text-xl font-bold">Quer mesmo deletar a entidade?</h3>
+			<p class="pb-4 pt-2 text-center text-sm text-gray-700">Isso irá apagar todos os recursos relacionados à ela, como o histórico de requerimentos de NFA, métricas, etc.</p>
 			<div class="grid grid-cols-2 gap-2">
-				@shared.ErrorButton("md") {
-					Sim
-				}
-				@shared.DefaultButton("md") {
-					Cancelar
-				}
+				<div hx-delete={ fmt.Sprintf("/entities/delete/%d", e.ID) } hx-target={ entityCardTarget(e) } hx-swap="outerHTML">
+					@shared.ErrorButton("md") {
+						Sim
+					}
+				</div>
+				<div onclick={ scripts.CloseDialog(deleteConfirmationDialogTarget(e)) }>
+					@shared.DefaultButton("md") {
+						Cancelar
+					}
+				</div>
 			</div>
 		</div>
 	</dialog>
@@ -100,24 +108,22 @@ func entityCardID(e *models.Entity) string {
 	return fmt.Sprintf("entity-card-%d", e.ID)
 }
 
-script openDialog(id string) {
-	const dialog = document.querySelector(`#${id}`)	
-	if (dialog) {
-		dialog.showModal()
-	}
-}
-
-script closeDialog(id string) {
-	const dialog = document.querySelector(`#${id}`)	
-	if (dialog) {
-		dialog.close()
-	}
+func entityCardTarget(e *models.Entity) string {
+	return fmt.Sprintf("#entity-card-%d", e.ID)
 }
 
 func entityDetailsID(e *models.Entity) string {
 	return fmt.Sprintf("entity-details-%d", e.ID)
 }
 
+func entityDetailsTarget(e *models.Entity) string {
+	return fmt.Sprintf("#entity-details-%d", e.ID)
+}
+
 func deleteConfirmationDialogID(e *models.Entity) string {
 	return fmt.Sprintf("delete-confirmation-dialog-%d", e.ID)
+}
+
+func deleteConfirmationDialogTarget(e *models.Entity) string {
+	return fmt.Sprintf("#delete-confirmation-dialog-%d", e.ID)
 }
