--- a/web/v2/ui/forms/login.templ
+++ b/web/v2/ui/forms/login.templ
@@ -1,13 +1,13 @@
 package forms
 
+import "github.com/cayo-rodrigues/nff/web/ui/shared"
 import "github.com/cayo-rodrigues/nff/web/models"
-import "github.com/cayo-rodrigues/nff/web/components/shared"
 
-templ RegisterForm(u *models.User) {
+templ LoginForm(u *models.User) {
 	<form
-		id="register-form"
+		id="login-form"
 		class="flex w-full flex-col gap-4 rounded p-4 shadow shadow-gray-600 md:w-2/3 md:p-8 lg:w-1/2 xl:w-1/3"
-		hx-post="/register"
+		hx-post="/login"
 		hx-target="body"
 		hx-push-url="true"
 	>
@@ -29,8 +29,8 @@ templ RegisterForm(u *models.User) {
 		</div>
 		<div class="mt-2">
 			@shared.SubmitButton("md") {
-				@shared.Icon("user-plus")
-				<span>Cadastrar</span>
+				@shared.Icon("log-in")
+				<span>Entrar</span>
 			}
 		</div>
 	</form>
