--- a/web/v2/ui/components/entities.templ
+++ b/web/v2/ui/components/entities.templ
@@ -47,10 +47,10 @@ templ EntityCard(e *models.Entity) {
 }
 
 templ EntityDetails(e *models.Entity) {
-	<dialog id={ entityDetailsID(e) } class="w-11/12 rounded sm:w-10/12 md:w-9/12 lg:w-7/12 xl:w-6/12 2xl:w-5/12">
+	<dialog id={ entityDetailsID(e) } class="rounded sm:w-10/12 md:w-9/12 lg:w-7/12 xl:w-6/12 2xl:w-5/12">
 		<div class="rounded border border-gray-200 p-2 shadow shadow-gray-300">
 			<div class="relative rounded border border-gray-300 p-2">
-				<h3 class="text-lg font-bold">{ e.Name }</h3>
+				<h3 class="break-words text-lg font-bold">{ e.Name }</h3>
 				<div 
 					class="absolute -right-2 -top-2 rounded-full bg-white pb-1 pl-1 transition hover:bg-gray-100 active:bg-gray-200 sm:p-1"
 					onclick={ scripts.CloseDialog(entityDetailsTarget(e)) }
@@ -75,7 +75,7 @@ templ EntityDetails(e *models.Entity) {
 }
 
 templ DeleteConfirmationDialog(e *models.Entity) {
-	<dialog id={ deleteConfirmationDialogID(e) } class="sm:w-3/4 md:w-3/5 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
+	<dialog id={ deleteConfirmationDialogID(e) } class="rounded sm:w-3/4 md:w-3/5 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
 		<div class="rounded border border-gray-200 p-4 shadow shadow-gray-300">
 			<h3 class="text-center text-xl font-bold">Quer mesmo deletar a entidade?</h3>
 			<p class="pb-4 pt-2 text-center text-sm text-gray-700">Isso irá apagar todos os recursos relacionados à ela, como o histórico de requerimentos de NFA, métricas, etc.</p>
