--- a/web/v2/ui/components/entities.templ
+++ b/web/v2/ui/components/entities.templ
@@ -100,7 +100,15 @@ templ SearchBar() {
 		<div class="rounded-s bg-white p-2">
 			@shared.Icon("search")
 		</div>
-		<input class="w-full rounded-e py-2 pr-2 outline-0" type="text" name="search" value=""/>
+		<input 
+			class="w-full rounded-e py-2 pr-2 outline-0"
+			type="text"
+			name="name"
+			hx-get="/entities/search"
+			hx-trigger="keyup delay:0.2s"
+			hx-target="#entity-list"
+			hx-swap="outerHTML"
+		/>
 	</div>
 }
 
