--- a/web/views/partials/forms/invoice-form.html
+++ b/web/views/partials/forms/invoice-form.html
@@ -23,9 +23,18 @@
 
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="sender"><strong>Remetente</strong></label>
-                    <select class="h-10 rounded bg-gray-100 p-2" id="sender" name="sender">
+                    <select 
+                        hx-get="/invoices/form/load-available-ies"
+                        hx-trigger="change, load"
+                        hx-target="#available-ies"
+                        hx-select="#available-ies"
+                        hx-swap="outerHTML"
+                        class="h-10 rounded bg-gray-100 p-2" id="sender" name="sender"
+                    >
                         {{ range .FormSelectFields.Entities }}
-                            <option {{ if eq $.Invoice.Sender.ID .ID }} selected {{ end }} value="{{ .ID }}">{{ .Name }}</option>
+                            <option {{ if eq $.Invoice.Sender.ID .ID }} selected {{ end }} value="{{ .ID }}">
+                                {{ .Name }}
+                            </option>
                         {{ end }}
                     </select>
                     <sub class="text-red-600">{{ .Invoice.Errors.Sender }}</sub>
@@ -71,6 +80,11 @@
                     <sub class="text-red-600">{{ .Invoice.Errors.IsIcmsContributor }}</sub>
                 </div>
 
+
+            </div>
+
+            <div class="flex w-1/2 flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label class="truncate" for="is_final_customer"><strong>Consumidor Final</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="is_final_customer" name="is_final_customer">
@@ -80,10 +94,6 @@
                     </select>
                     <sub class="text-red-600">{{ .Invoice.Errors.IsFinalCustomer }}</sub>
                 </div>
-
-            </div>
-
-            <div class="flex w-1/2 flex-col gap-4 md:w-full md:flex-1 md:flex-row">
 
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="shipping"><strong>Frete</strong></label>
@@ -115,6 +125,23 @@
                     <sub class="text-red-600">{{ .Invoice.Errors.ExtraNotes }}</sub>
                 </div>
 
+
+
+
+            </div>
+
+            <div class="flex w-1/2 flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+                <div id="available-ies" class="flex flex-col gap-2 md:w-1/5">
+                    <label class="truncate" for="sender_ie"><strong>IE</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2 md:w-full" id="sender_ie"
+                        name="ie">
+                        {{ range .Invoice.Sender.AllIes }}
+                            <option {{ if eq $.Invoice.SenderIe . }} selected {{ end }} value="{{ . }}">{{ . }}</option>
+                        {{ end }}
+                    </select>
+                    <sub class="text-red-600">{{ .Invoice.Errors.SenderIe }}</sub>
+                </div>
+
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label class="truncate" for="custom_file_name"><strong>Nome do arquivo</strong></label>
                     <input class="rounded bg-gray-100 p-2 md:w-full" type="text" id="custom_file_name" name="custom_file_name" value="{{ .Invoice.CustomFileName }}">
@@ -129,7 +156,6 @@
                     </button>
                     <sub class="text-red-600">{{ .Invoice.Errors.Items }}</sub>
                 </div>
-
             </div>
 
         </div>
@@ -156,7 +182,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M32 32C14.3 32 0 46.3 0 64v96c0 17.7 14.3 32 32 32s32-14.3 32-32V96h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H32zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64V352zM320 32c-17.7 0-32 14.3-32 32s14.3 32 32 32h64v64c0 17.7 14.3 32 32 32s32-14.3 32-32V64c0-17.7-14.3-32-32-32H320zM448 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H320c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V352z"/></svg>
                     </button>
 
-                    <button onclick="this.closest('dialog').close()" class="rounded px-4 py-3 transition-colors bg-gray-200 hover:bg-gray-300 active:bg-gray-400" type="button">
+                    <button onclick="this.closest('dialog').close()" class="rounded bg-gray-200 px-4 py-3 transition-colors hover:bg-gray-300 active:bg-gray-400" type="button">
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
                             <path
                                     d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
